--- a/style.css
+++ b/style.css
@@ -1015,28 +1015,53 @@ strong {
 } */
 
 .top-header {
-    display: block;
-    background-color: #e1e6f6;
+    position: relative;   /* ::before 기준 */
+    overflow: hidden;     /* 블러된 배경이 밖으로 삐져나오는 것 방지 */
+    /* display: block;
+    background-color: #e1e6f6; */
     color: black;
-    padding: 2rem 1rem;
+    padding: 6rem 3rem;
     text-align: center;
     border-radius: 0 0 8px 8px;
     /* 아래쪽 모서리 둥글게 */
+    height: 250px;      /* 세로 길이 고정 */
+    justify-content: center; /* 글씨를 수직 중앙 정렬 */
+}
+
+/*Design-18 이미지 넣기*/
+.top-header::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    /* top/right/bottom/left: 0 */
+    background: url('images/index-background2.jpg') center / cover no-repeat;
+    filter: blur(6px);
+    transform: scale(1.05);
+    /* 블러 가장자리 비치는 거 방지용 살짝 확대 */
+    z-index: 0;
+    /* 음수 X */
+}
+
+/* 자식 요소를 위로 올리기 */
+.top-header > * {
+  position: relative;
+  z-index: 1;
 }
 
 /*Design-14 색수정*/
 
-.about-title {
+.top-title {
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
+    color: white;
 }
 
-.about-subtitle {
+.top-subtitle {
     font-size: 1rem;
     max-width: 700px;
     margin: 0 auto;
     line-height: 1.5;
-    color: black;
+    color: white;
 }
 
 .quoteidx-block {
